<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.kyh.musicplayer.music.MusicViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_playlist_txt"
            android:textSize="16dp"
            android:textColor="@color/medium_grey"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/playlist_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/medium_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_txt"
            android:textSize="14dp"
            android:textColor="@color/medium_grey"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_edt"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_txt"
            android:textSize="14dp"
            android:textColor="@color/medium_grey"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintEnd_toStartOf="@+id/confirm_btn"
            app:layout_constraintTop_toBottomOf="@+id/playlist_edt"
            app:layout_constraintBottom_toBottomOf="@+id/confirm_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>